exercises/day 4/affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-with-node-affinity
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
        - matchExpressions:
          - key: virtualcpus
            operator: In
            values:
            - "3"
            - "4"
      preferredDuringSchedulingIgnoredDuringExecution:
      - weight: 1
        preference:
          matchExpressions:
          - key: storagetype
            operator: In
            values:
            - ssd
  containers:
  - name: nginx-with-node-affinity
    image: nginx:latest
