exercises/day 4/downwardapi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx-container
        image: nginx
        resources:
          limits:
            memory: "64Mi"
            cpu: "250m"
        volumeMounts:
        - name: podinfo
          mountPath: /usr/share/nginx/html
      volumes:
      - name: podinfo
        downwardAPI:
          items:
          - path: "index.html"
            fieldRef:
              fieldPath: metadata.name
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    nodePort: 30080
  type: NodePort
