exercises/day 4/probe-2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: probe-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: vergeops/versioned-nginx:liveness
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  ports:
  - protocol: TCP
    port: 80
    nodePort: 30080
  type: NodePort
